# grafana-series1-week5

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: main.yml
src/grafana_series1_week5/: client.py  observability.py
tests/: conftest.py  test_contract.py
